[project]
name = "agent-safety"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]<=0.121.2",
    "fastapi-cdn-host>=0.9.2",
    "fastmcp>2.3.1",
    "openai>=2.8.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "semgrep",
    "uvicorn>=0.38.0",
]
